--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 html,
 body {
+  min-height: 100%;
+
+  color: white;
+  background-color: #101010;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,4 +17,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#__next{
+  min-height: 100%;
 }
