--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,63 +1,114 @@
-.container{
+.container {
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
-.grid{
+
+.grid {
   padding: 20px;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-.grid h1{
-  font-size: 30px;
+
+.grid h1 {
+  font-size: 28px;
   font-weight: 600;
   margin: 0px 0px 20px 0px;
 }
-.nameWrap{
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+
+.avatar {
+  border-radius: 50%;
 }
-.username{
+
+.nameWrap {
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nameWrap .username {
   text-align: center;
   color: #fff;
   font-size: 22px;
   font-weight: 700;
 }
-.bio{
+
+.nameWrap .bio {
   text-align: center;
   color: #808080;
   font-size: 14px;
 }
-.avatar{
-  border-radius: 50%;
-}
-.iconWrap{
+
+.iconWrap {
   color: #fff;
   font-size: 14px;
   padding: 3px;
 }
-.icon{
+
+.icon {
   margin-right: 4px;
 }
-.track{
+
+.track {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 10px 0px;
   max-width: 100%;
 }
-.trackThumb{
+
+.track .thumb {
   border-radius: 10%;
 }
-.trackDescription{
+
+.track .description {
   margin-left: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-.trackArtist{
+
+.track .description .name {
+  color: #fff;
+  font-size: 18px;
+  max-width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.track .description .artist {
   color: #808080;
   font-size: 14px;
   max-width: 200px;
@@ -65,23 +116,18 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.trackName{
-  color: #fff;
-  font-size: 18px;
-  max-width: 250px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 
-}
-.trackStatus{
+.trackStatus {
   margin: 40px 0px;
 }
-.apiDescription{
+
+.apiDescription {
   color: #808080;
   font-size: 11px;
   margin: 20px 0px 0px 0px;
 }
-.apiDescription a{
+
+.apiDescription a {
   color: #fff;
 }
+/*# sourceMappingURL=Home.module.css.map */
