--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,10 @@
 .container {
   min-height: 100vh;
+  color: #fff;
+  background-color: #101010;
+}
+
+.blur {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,10 +15,18 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-backdrop-filter: blur(55px);
+          backdrop-filter: blur(55px);
+  background-color: rgba(255, 255, 255, 0.2);
+  min-height: 100vh;
 }
 
 .grid {
-  padding: 20px;
+  margin: 20px;
+  padding: 24px 85px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -24,33 +37,42 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+  background-color: rgba(0, 0, 0, 0.32);
+  min-width: 100vw;
+  -webkit-box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
+          box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
 }
 
-.grid h1 {
-  font-size: 28px;
+.card {
+  margin: 20px;
+  padding: 40px 48px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
+  background-color: rgba(0, 0, 0, 0.32);
+  min-width: 380px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
+          box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
+}
+
+.card h1 {
+  font-size: 26px;
   font-weight: 600;
   margin: 0px 0px 20px 0px;
   overflow: hidden;
   position: relative;
-}
-
-.grid h1:before {
-  background: #101010;
-  z-index: 1;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  content: '';
-  -webkit-animation: animation01 0.5s forwards;
-          animation: animation01 0.5s forwards;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
 }
 
 .avatar {
@@ -80,7 +102,7 @@
 
 .nameWrap .bio {
   text-align: center;
-  color: #808080;
+  color: #ccc;
   font-size: 14px;
 }
 
@@ -132,25 +154,6 @@
   position: relative;
 }
 
-.track .description:before {
-  background: #101010;
-  z-index: 1;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  content: '';
-  -webkit-animation: animation01 0.6s forwards;
-          animation: animation01 0.6s forwards;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-}
-
 .track .description .name {
   color: #fff;
   font-size: 18px;
@@ -161,7 +164,7 @@
 }
 
 .track .description .artist {
-  color: #808080;
+  color: #ccc;
   font-size: 14px;
   max-width: 200px;
   white-space: nowrap;
@@ -174,7 +177,7 @@
 }
 
 .apiDescription {
-  color: #808080;
+  color: #ccc;
   font-size: 11px;
   margin: 20px 0px 0px 0px;
 }
