--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,40 +1,51 @@
 // Colors
 $primary: #fff;
-$second: #808080;
+$second: #ccc;
 
 .container{
   min-height: 100vh;
+  color: $primary;
+  background-color: #101010;
+}
+.blur{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
+  backdrop-filter: blur(55px);
+  background-color: rgba(255,255,255,0.2);
+  min-height: 100vh;
 }
 .grid{
-  padding: 20px;
+  margin: 20px;
+  padding: 24px 85px;
   flex-direction: column;
   display: flex;
   align-items: center;
+  backdrop-filter: blur(30px);
+  background-color: rgba(0,0,0,0.32);
+  min-width: 100vw;
+
+  box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
+}
+.card{
+  margin: 20px;
+  padding: 40px 48px;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  backdrop-filter: blur(30px);
+  background-color: rgba(0,0,0,0.32);
+  min-width: 380px;
+  border-radius: 12px;
+  box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
 
   h1{
-    font-size: 28px;
+    font-size: 26px;
     font-weight: 600;
     margin: 0px 0px 20px 0px;
     overflow: hidden;
     position: relative;
-
-    &:before{
-      background: #101010;
-      z-index: 1;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      top: 0;
-      content: '';
-      animation: animation01 0.5s forwards;
-      animation-timing-function: ease-out;
-      animation-delay: 0.3s;
-      animation-direction: alternate;
-    }
   }
 }
 
@@ -91,21 +102,6 @@ $second: #808080;
     overflow: hidden;
     position: relative;
 
-    &:before{
-      background: #101010;
-      z-index: 1;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      top: 0;
-      content: '';
-      animation: animation01 0.6s forwards;
-      animation-timing-function: ease-out;
-      animation-delay: 0.9s;
-      animation-direction: alternate;
-    }
-  
     .name{
       color: $primary;
       font-size: 18px;
