--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,24 +2,14 @@
   min-height: 100vh;
   color: #fff;
   background-color: #101010;
-  -webkit-transition: all 2s;
   transition: all 2s;
 }
 
 .blur {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   -webkit-backdrop-filter: blur(55px);
           backdrop-filter: blur(55px);
   background-color: rgba(255, 255, 255, 0.2);
@@ -29,46 +19,29 @@
 .grid {
   margin: 20px;
   padding: 24px 85px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: column;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   background-color: rgba(0, 0, 0, 0.32);
   min-width: 100vw;
-  -webkit-box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
-          box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
+  box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
 }
 
 .card {
   margin: 20px;
   padding: 40px 48px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: column;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   -webkit-backdrop-filter: blur(30px);
           backdrop-filter: blur(30px);
   background-color: rgba(0, 0, 0, 0.32);
   min-width: 380px;
   border-radius: 12px;
-  -webkit-box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
-          box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
+  box-shadow: 0 1.9px 2.5px rgba(0, 0, 0, 0.03), 0 5px 6.1px rgba(0, 0, 0, 0.03), 0 10.1px 11.4px rgba(0, 0, 0, 0.03);
 }
-
 .card h1 {
   font-size: 26px;
   font-weight: 600;
@@ -80,82 +53,24 @@
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
 }
-
 .card h1::-moz-selection {
   background: #65C3C8;
   color: #fff;
 }
-
 .card h1::selection {
   background: #65C3C8;
   color: #fff;
 }
 
-.avatar {
-  border-radius: 50%;
-  -webkit-animation: fadeIn 0.8s forwards;
-          animation: fadeIn 0.8s forwards;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-}
-
-.avatar::-moz-selection {
-  background: #65C3C8;
-}
-
-.avatar::selection {
-  background: #65C3C8;
-}
-
 .nameWrap {
   padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   -webkit-animation: fadeIn 0.8s forwards;
           animation: fadeIn 0.8s forwards;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
-}
-
-.nameWrap .username {
-  text-align: center;
-  color: #fff;
-  font-size: 22px;
-  font-weight: 700;
-}
-
-.nameWrap .username::-moz-selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-.nameWrap .username::selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-.nameWrap .bio {
-  text-align: center;
-  color: #ccc;
-  font-size: 14px;
-}
-
-.nameWrap .bio::-moz-selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-.nameWrap .bio::selection {
-  background: #65C3C8;
-  color: #fff;
 }
 
 .iconWrap {
@@ -166,23 +81,11 @@
           animation-direction: alternate;
 }
 
-.icon {
-  color: #fff;
-  font-size: 24px;
-}
-
-.icon:hover {
-  opacity: 0.6;
-}
-
 .track {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 10px 0px;
   max-width: 100%;
 }
-
 .track .thumb {
   border-radius: 10%;
   -webkit-animation: fadeIn 0.5s forwards;
@@ -195,27 +98,17 @@
           animation-delay: 0.7s;
   opacity: 0;
 }
-
 .track .thumb::-moz-selection {
   background: #65C3C8;
 }
-
 .track .thumb::selection {
   background: #65C3C8;
 }
-
 .track .description {
   margin-left: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   overflow: hidden;
   position: relative;
   border-radius: 10%;
@@ -229,7 +122,6 @@
           animation-delay: 0.7s;
   opacity: 0;
 }
-
 .track .description .name {
   color: #fff;
   font-size: 18px;
@@ -238,17 +130,14 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .track .description .name::-moz-selection {
   background: #65C3C8;
   color: #fff;
 }
-
 .track .description .name::selection {
   background: #65C3C8;
   color: #fff;
 }
-
 .track .description .artist {
   color: #ccc;
   font-size: 14px;
@@ -257,12 +146,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
 .track .description .artist::-moz-selection {
   background: #65C3C8;
   color: #fff;
 }
-
 .track .description .artist::selection {
   background: #65C3C8;
   color: #fff;
@@ -274,71 +161,6 @@
           animation: fadeIn 0.2s forwards;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
-}
-
-.apiDescription {
-  color: #ccc;
-  font-size: 11px;
-  margin: 20px 0px 0px 0px;
-  -webkit-animation: fadeIn 1.5s forwards;
-          animation: fadeIn 1.5s forwards;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-  opacity: 0;
-}
-
-.apiDescription::-moz-selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-.apiDescription::selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-.apiDescription a {
-  color: #fff;
-}
-
-.apiDescription a::-moz-selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-.apiDescription a::selection {
-  background: #65C3C8;
-  color: #fff;
-}
-
-@-webkit-keyframes blurFadeIn {
-  0% {
-    opacity: 0;
-    -webkit-filter: blur(10px);
-            filter: blur(10px);
-  }
-  100% {
-    -webkit-filter: blur(0px);
-            filter: blur(0px);
-    opacity: 1;
-  }
-}
-
-@keyframes blurFadeIn {
-  0% {
-    opacity: 0;
-    -webkit-filter: blur(10px);
-            filter: blur(10px);
-  }
-  100% {
-    -webkit-filter: blur(0px);
-            filter: blur(0px);
-    opacity: 1;
-  }
 }
 
 @-webkit-keyframes fadeIn {
@@ -357,19 +179,4 @@
   100% {
     opacity: 1;
   }
-}
-
-@-webkit-keyframes animation02 {
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-}
-
-@keyframes animation02 {
-  100% {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-  }
-}
-/*# sourceMappingURL=Home.module.css.map */
+}/*# sourceMappingURL=Home.module.css.map */
