--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -85,6 +85,7 @@
   display: flex;
   padding: 10px 0px;
   max-width: 100%;
+  max-height: 75px;
 }
 .track .thumb {
   border-radius: 10%;
@@ -94,8 +95,6 @@
           animation-timing-function: ease-out;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
   opacity: 0;
 }
 .track .thumb::-moz-selection {
@@ -118,8 +117,6 @@
           animation-timing-function: ease-out;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
   opacity: 0;
 }
 .track .description .name {
